Task: Added steps and ingredients for prime rib and curry recipes

--- a/recipes/boss-level-prime-rib.html
+++ b/recipes/boss-level-prime-rib.html
@@ -22,35 +22,30 @@
 
     <p>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Prime Rib</li>
+            <li>2 Tbsp Rosemary</li>
+            <li>2 Tbsp Thyme</li>
+            <li>7 Cloves of Minced Garlic</li>
+            <li>1.5 Tbsp Salt</li>
+            <li>1 Tbsp of Black Pepper</li>
+            <li>2 Sticks of Salted/Unsalted Butter</li>
         </ul>
     </p>
 
-    <h1>Steps</h1>
+    <h2>Steps</h2>
 
     <p>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Preheat oven for 550 Degrees</li>
+            <li>Prepare a mixing bowl of all the spices necessary for the Prime Rib: Rosemary, Thyme, Minced Garlic, Salt, Pepper, and Butter</li>
+            <li>Melt the butter and mix in the spices all together.</li>
+            <li>Lather the Prime Rib with the buttery spice concoction.</li>
+            <li>Place the Prime Rib bone down/Fat Up onto a pan that is able to catch the drippings (Can be saved later for Gravy).</li>
+            <li>Place the Prime Rib into the oven for 5 minutes per pound of Prime Rib.</li>
+            <li>Turn the oven off after the 5 minutes per pound time.</li>
+            <li>Let the Prime Rib sit inside of the oven with it now off for 120 minutes.</li>
+            <li>Allow a few minutes for the Prime Rib to rest when taken out of the oven and before serving.</li>
+            <li>Cut and portion out Prime Rib pieces.</li>
         </ol>
     </p>
 </body>
