--- a/recipes/katsu-curry-chicken-cutlet.html
+++ b/recipes/katsu-curry-chicken-cutlet.html
@@ -33,25 +33,29 @@
             <li>Garlic Powder to Taste</li>
             <li>1 Tablespoon of Crushed Black Pepper</li>
             <li>Panko Crust</li>
+            <li>Water</li>
         </ul>
     </p>
 
-    <h1>Steps</h1>
+    <h2>Steps</h2>
 
     <p>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Boil 2.5 cups of water in a pot.</li>
+            <li>Add 0.5 cups of Milk into the boiling water.</li>
+            <li>Add 5 whole blocks of Golden Curry.</li>
+            <li>Allow the blocks of curry to melt and mix well into the mixture.</li>
+            <li>Add Spices such as Salt, Pepper, Garlic Powder.</li>
+            <li>Mix the curry well and turn the heat down to a simmer after the correct consistency has been reached.</li>
+            <li>Cut the Chicken Breasts in half (While the breast is resting, use your hand over the breast and compress the breast down. Use the knife to cut horizontally through the entire breast leaving two thin slices of the breast).</li>
+            <li>In a bowl, crack 1-2 eggs and mix well.</li>
+            <li>Dunk the chicken breast slices into the egg mixture, and then lay over a separate plate of Panko Crust.</li>
+            <li>Repeat the process of dunking into the egg mixture and then back onto the Pank Crust once more to complete two coatings.</li>
+            <li>In a large pan, add vegetable oil and turn to medium-high heat.</li>
+            <li>Once the vegetable oil is decently hot for frying, add the Panko Crusted Chicken breasts.</li>
+            <li>Flip each breast in the pan after about 2 minutes of frying until reaching a golden brown color.</li>
+            <li>Remove the Chicken breasts and place onto a place with a few napkins down to absorb any excess oil.</li>
+            <li>Cut the Chicken Breasts vertically and pour the curry over the Chicken (Rice is optional but goes extremely well with this dish).</li>
         </ol>
     </p>
 </body>
